--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -4,9 +4,9 @@
 %table#movies
   %thead
     %tr
-      %th Movie Title
+      %th#title_header= sortable "title", "Movie Title"
       %th Rating
-      %th Release Date
+      %th#release_date_header= sortable "release_date",  "Release Date"
       %th More Info
   %tbody
     - @movies.each do |movie|
