--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -11,9 +11,9 @@
 %table#movies
   %thead
     %tr
-      %th#title_header= link_to "Movie Title", :sort_by => "title"
+      %th= link_to "Movie Title", :sort_by => "title", id: "title_header"
       %th Rating
-      %th#release_date_header= link_to "Release Date", :sort_by => "release_date"
+      %th= link_to "Release Date", :sort_by => "release_date", id: "release_date_header"
       %th More Info
   %tbody
     - @movies.each do |movie|
